# smart-power-case-v2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  stmf4xx-jlink.cfg  stmf4xx-stlink.cfg
.github/workflows/: build.yml
doc/: smart_power_f4.ioc
src/: FreeRTOSConfig.h  device_config.h  hw_config.h  main.c  main.h
src/components/bq27441/: bq27441.c  bq27441.h
src/components/cli/: cli.c
src/components/delay/: delay.c  delay.h
src/components/dfu/: dfu.c
src/components/gui/: lv_conf.h
src/components/lis3dh/: CMakeLists.txt  lis3dh_reg.c  lis3dh_reg.h
src/components/st7735s/: st7735s.c  st7735s.h  st7735s_settings.h  st7735s_spi.c  st7735s_spi.h
src/components/st7735s/fonts/: fonts.h
src/components/st7735s/picts/: picts.h
src/components/tinyprintf/: tinyprintf.c
src/device/battery/: battery.c  battery.h
src/device/button/: button.c  button.h
src/device/components_init/: hardware.c  hardware.h
src/device/dfu/: dfu.c
src/device/display/: display.c  display.h  lv_demo_keypad_encoder.c  lv_demo_keypad_encoder.h
src/device/eeprom/: eeprom.c  eeprom.h
src/device/gui/: gui.c  gui.h  gui_main_screen.c  gui_main_screen.h  gui_menu_screen.c  gui_menu_screen.h  gui_settings_screen.c  gui_settings_screen.h  gui_style.c  gui_style.h
src/device/gui/icon/: about_icon.c  acc_icon.c  accept_icon.c  battery_1.c  battery_health_2_icon.c  battery_health_icon.c  battery_icon_big.c  battery_icon_small.c  big_bat_tail_icon.c  buzzer_icon.c  cancel_icon.c  charg_icon.c  exit_icon.c  info_icon.c  mah_icon.c  settings_icon.c  statistics_icon.c  timer_icon.c
src/device/gui/screens/: gui_main_screen.c  gui_main_screen.h  gui_menu_screen.c  gui_settings_screen.c  gui_settings_screen.h  gui_setup_acc.c  gui_setup_acc.h  gui_setup_buzzer.c  gui_setup_buzzer.h  gui_setup_timer.c  gui_setup_timer.h
src/device/hal_config/: stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h
src/device/imu/: imu.c  imu.h
src/device/init/: stm32_init.c  stm32_init.h
src/device/power/: power.c  power.h
src/device/service/: service.c  service.h
src/device/stm32_hal_config/: stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  stm32f4xx_it.h
src/device/stm32_init/: stm32_init.c  stm32_init.h
src/device/tasks/: device_tasks.c  device_tasks.h
src/device/usbd/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
src/stm32/ld_script/: STM32F411CEUx_FLASH.ld
src/stm32_device_library/ld_script/: STM32F411CEUx_FLASH.ld
